# expensesTrackingRust

./: Cargo.toml  README.md  output.csv
expenses_tracking/: Cargo.toml
expenses_tracking/src/: expense_tracker.rs  main.rs  transaction.rs
gui/: main.rs
src/: expense_tracker.rs  lib.rs  main.rs  transaction.rs
src/expenses_tracking/: expense_tracker.rs  main.rs  mod.rs  transaction.rs
src/gui/: README.md  main.rs  table.rs
test_data/: transactions_example.csv
