[package]
name = "expenses_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
chrono = "0.4.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
log = "0.4"
