[package]
name = "expenses_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
log = "0.4"
tempdir = "0.3"
