[package]
name = "expenses_tracking"
version = "0.1.0"
edition = "2021"
default-run = "expenses_tracking"

[[bin]]
name = "expenses_gui"
path = "src/gui/main.rs"

[[bin]]
name = "expenses_tracking"
path = "src/expenses_tracking/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
log = "0.4"
tempdir = "0.3"

eframe = { version = "0.28" }
egui_extras = { version = "0.28" }
